--- a/findhelp_backend/src/main/resources/application.properties
+++ b/findhelp_backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/findhelp
-spring.datasource.username=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/findhelp
+spring.datasource.username=root
 spring.datasource.password=12345678
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
